--- a/miEstilo.css
+++ b/miEstilo.css
@@ -2,35 +2,61 @@
     font-family: Press_Start_2P;
     src: url("Fuente/PressStart2P-Regular.ttf");
 }
-body{
+
+body {
     background-color: #001014;
     color: white;
     font-family: Press_Start_2P, sans-serif;
     text-align: center;
-    margin-top: 5%;
+    margin: auto;
+
+    padding: 45px;
 }
-div{
-    padding: 2vh;
+
+h1 {
+    padding: 15px;
 }
-.inicio{
-    font-size: 5vw;
+
+div {
+    padding: 4vh;
 }
-.botonesInicio{
+
+p {
+    padding: 3px;
+    line-height: 1.8;
+}
+
+#principal {
+    margin: auto;
+    padding: 6%;
+    font-size: 250%;
+}
+
+.boton {
     color: white;
-    font-size: 280%;
     text-decoration: none;
+    margin: auto;
+    padding: 0 10% 0 10%;
 }
-.botonesCJ{
-    color: white;
-    font-size: 3vh;
-    text-decoration: none;
-}
-.comoJugar{
-    font-size: 2vh;
-}
-.verde{
+
+.verde {
     color: #11D147;
 }
-.amarillo{
+
+.amarillo {
     color: #FEEA00;
+}
+
+table {
+    border-collapse: separate;
+    border-spacing: 15px;
+    font-size: 25px;
+    margin: auto;
+}
+
+td {
+    height: 40px;
+    width: 40px;
+    border: 3px solid white;
+    border-radius: 5px;
 }
